force-app/main/default/objects/Mining_Project_Id__c/Mining_Project_Id__c.object-meta.xml
<CustomObject>
    <label>Mining Project Id</label>
    <nameField>
        <displayFormat>MPI-{0000}</displayFormat>
        <label>Mining Project Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mining Project Ids</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>