force-app/main/default/objects/Mining_Project_Id__c/fields/Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Status__c</fullName>
    <label>Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>No demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>