force-app/main/default/objects/Mining_Project_Id__c/fields/Does_it_need_refinement__c.field-meta.xml
<CustomField>
    <fullName>Does_it_need_refinement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does it need refinement?</label>
    <type>Checkbox</type>
</CustomField>