force-app/main/default/objects/Mining_Project_Id__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight</label>
    <referenceTo>Freight__c</referenceTo>
    <relationshipLabel>Mining Project Ids</relationshipLabel>
    <relationshipName>Mining_Project_Ids</relationshipName>
    <type>Lookup</type>
</CustomField>