force-app/main/default/objects/Mining_Project_Id__c/fields/Hazard_Count__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Count__c</fullName>
    <formula>IF(INCLUDES(Hazardous_Issues__c, &apos;Corrosive Environment&apos;), 1, 0) 
+ IF(INCLUDES(Hazardous_Issues__c, &apos;High Radiation&apos;), 1, 0) 
+ IF(INCLUDES(Hazardous_Issues__c, &apos;Low Gravity&apos;), 1, 0)
+ IF(INCLUDES(Hazardous_Issues__c, &apos;Low Atmosphere Pressure&apos;), 1, 0)
+ IF(INCLUDES(Hazardous_Issues__c, &apos;High Temperatures&apos;), 1, 0)
+ IF(INCLUDES(Hazardous_Issues__c, &apos;Low Temperatures&apos;), 1, 0)
+ IF(INCLUDES(Hazardous_Issues__c, &apos;Crashing Atmosphere Pressure&apos;), 1, 0)
+ IF(INCLUDES(Hazardous_Issues__c, &apos;Volcanic Activity&apos;), 1, 0)
+ IF(INCLUDES(Hazardous_Issues__c, &apos;Crashing Gravity&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hazard Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>