force-app/main/default/objects/Mining_Project_Id__c/fields/Hazardous_Issues__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Issues__c</fullName>
    <label>Hazardous Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corrosive Environment</fullName>
            </value>
            <value>
                <fullName>High Radiation</fullName>
            </value>
            <value>
                <fullName>Low Gravity</fullName>
            </value>
            <value>
                <fullName>Low Atmosphere Pressure</fullName>
            </value>
            <value>
                <fullName>High Temperatures</fullName>
            </value>
            <value>
                <fullName>Low Temperatures</fullName>
            </value>
            <value>
                <fullName>Crashing Atmosphere Pressure</fullName>
            </value>
            <value>
                <fullName>Volcanic Activity</fullName>
            </value>
            <value>
                <fullName>Crashing Gravity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>