force-app/main/default/objects/Mining_Project_Id__c/fields/Important_Notes_about_Project__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes_about_Project__c</fullName>
    <description>Enter a brief description of what is the Mining Project about</description>
    <label>Important Notes about Project</label>
    <type>TextArea</type>
</CustomField>