force-app/main/default/objects/Mining_Project_Id__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venus</fullName>
            </value>
            <value>
                <fullName>Moon</fullName>
            </value>
            <value>
                <fullName>Mars</fullName>
            </value>
            <value>
                <fullName>Jupiter</fullName>
            </value>
            <value>
                <fullName>Saturn</fullName>
            </value>
            <value>
                <fullName>Io</fullName>
            </value>
            <value>
                <fullName>Enceladus</fullName>
            </value>
            <value>
                <fullName>Europa</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Ceres</fullName>
            </value>
            <value>
                <fullName>Asteroid Belt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>