force-app/main/default/objects/Mining_Project_Id__c/fields/Machine_and_Tools__c.field-meta.xml
<CustomField>
    <fullName>Machine_and_Tools__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine and Tools</label>
    <referenceTo>Machine_and_Tools__c</referenceTo>
    <relationshipLabel>Mining Project Ids</relationshipLabel>
    <relationshipName>Mining_Project_Ids</relationshipName>
    <type>Lookup</type>
</CustomField>