force-app/main/default/objects/Mining_Project_Id__c/fields/Mineral_or_Element_for_Extraction__c.field-meta.xml
<CustomField>
    <fullName>Mineral_or_Element_for_Extraction__c</fullName>
    <label>Mineral or Element for Extraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lithium</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Helium-3</fullName>
            </value>
            <value>
                <fullName>Methane</fullName>
            </value>
            <value>
                <fullName>Carbon Dioxide</fullName>
            </value>
            <value>
                <fullName>Nickel</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
            <value>
                <fullName>Magnesium</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Cobalt</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>