force-app/main/default/objects/Mining_Project_Id__c/fields/Mining_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Mining_Project_Start_Date__c</fullName>
    <label>Mining Project Start Date</label>
    <type>Date</type>
</CustomField>