force-app/main/default/objects/Mining_Project_Id__c/fields/Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Manager</label>
    <referenceTo>Site_Manager__c</referenceTo>
    <relationshipLabel>Mining Project Ids</relationshipLabel>
    <relationshipName>Mining_Project_Ids</relationshipName>
    <type>Lookup</type>
</CustomField>