force-app/main/default/objects/Mining_Project_Id__c/fields/Space_Researcher__c.field-meta.xml
<CustomField>
    <fullName>Space_Researcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Space Exploration Leader</description>
    <label>Space Researcher</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Element_Descriptions</relationshipName>
    <type>Lookup</type>
</CustomField>