force-app/main/default/objects/Mining_Project_Id__c/fields/Tons__c.field-meta.xml
<CustomField>
    <fullName>Tons__c</fullName>
    <label>Tons</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>