force-app/main/default/objects/Mining_Project_Id__c/validationRules/Every_Project_Should_a_Start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Every_Project_Should_a_Start_date</fullName>
    <active>false</active>
    <description>Every Project Should have a start date</description>
    <errorConditionFormula>ISBLANK(Mining_Project_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Mining_Project_Start_Date__c</errorDisplayField>
    <errorMessage>Project mush have start date</errorMessage>
</ValidationRule>