force-app/main/default/objects/Mining_Project_Id__c/listViews/Site_Manager_Queues_Element_Description.listView-meta.xml
<ListView>
    <fullName>Site_Manager_Queues_Element_Description</fullName>
    <filterScope>Queue</filterScope>
    <label>Site Manager Queues</label>
    <queue>Site_Manager_Queues</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>